# HumanoidAgents

./: LICENSE  README.md  requirements.txt  setup.cfg
daily_events/: example.yaml
humanoid_agents/: generative_agent.py  llm.py  run_dashboard.py  run_simulation.py  utils.py
humanoidagents/: customized_humanoid_agent.py  default_agent_config.json  generative_agent.py  humanoid_agent.py  llm.py  location.py  run_dashboard.py  run_simulation.py  run_simulation_server.py  utils.py
locations/: big_bang_map.yaml  friends_map.yaml  lin_family_map.yaml
specific_agents/: eddy_lin.json  joey_tribbiani.json  john_lin.json  leonard_hofstadter.json  monica_gellor.json  penny.json  rachel_greene.json  sheldon_cooper.json
