[metadata]
name = humanoidagents
version = 0.1.2
description = Platform for Simulating Human-like Generative Agents
long_description = file: README.md
long_description_content_type = text/markdown
author = Humanoid Agents
author_email = humanoidagents@gmail.com
url = https://github.com/HumanoidAgents/HumanoidAgents
license_files = LICENSE

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    openai >= 0.27.2
    numpy >= 1.23.5
    scikit-learn >= 1.2.1
    dash >= 2.11.1
    dash-daq >= 0.5.0
    dash-bootstrap-components >= 1.4.2
    PyYAML >= 6.0
    pandas >= 2.0.2
    plotly >= 5.15.0

[options.packages.find]
exclude = 
    tests
    tests.*